fix: style gap space with cards

--- a/src/app/pages/dashboard-adm/dashboard-adm.component.scss
+++ b/src/app/pages/dashboard-adm/dashboard-adm.component.scss
@@ -16,9 +16,10 @@
         align-items: center;
 
         .card-list {
-            width: 80%;
+            width: 100%;
             display: flex;
-            justify-content: stretch;
+            justify-content: center;
+            gap: 2rem;
             align-items: center;
 
             .card {
